--- a/servicio-sarcatalogos-dev.properties
+++ b/servicio-sarcatalogos-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/sarm1
-spring.datasource.username=jonathansanchez
-spring.datasource.password=jonathansanchez
+spring.datasource.username=ebr
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
