--- a/servicio-sarpps-dev.properties
+++ b/servicio-sarpps-dev.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+spring.datasource.url=jdbc:postgresql://localhost:5432/sarm1
 spring.datasource.username=ebr
 spring.datasource.password=password
 
