--- a/servicio-sarpps-dev.properties
+++ b/servicio-sarpps-dev.properties
@@ -10,8 +10,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/sarm1
 spring.datasource.username=ebr
