--- a/servicio-sarpps-dev.properties
+++ b/servicio-sarpps-dev.properties
@@ -21,3 +21,7 @@ spring.datasource.password=password
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+#Propiedades para zipkin server
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.base-url=http://localhost:9411//
