--- a/servicio-sartc-dev.properties
+++ b/servicio-sartc-dev.properties
@@ -1,31 +1,29 @@
 #Configuracion general postgresSql
 spring.datasource.driverClassName=org.postgresql.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.use_sql_comments=false
-spring.jpa.properties.hibernate.format_sql=false
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
-#spring.datasource.username=postgres
-#spring.datasource.password=luis123
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/sarm1
-spring.datasource.username=ebr
-spring.datasource.password=password
-
+#db sar
+sar.datasource.url=jdbc:postgresql://localhost:5432/sarm1
+sar.datasource.username=ebr
+sar.datasource.password=password
+sar.datasource.driver-class-name=org.postgresql.Driver
+sar.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+sar.jpa.generate-ddl=false
+sar.jpa.hibernate.ddl-auto=none
+sar.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#db ef
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
+ef.datasource.username=
+ef.datasource.password=
+ef.datasource.driver-class-name=org.postgresql.Driver
+ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ef.jpa.generate-ddl=false
+ef.jpa.hibernate.ddl-auto=none
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-
 #esta propiedad es para que todas las trazas a o logs se manden siempre al servidor
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://localhost:9411//
