--- a/servicio-sartc-dev.properties
+++ b/servicio-sartc-dev.properties
@@ -14,8 +14,8 @@ sar.jpa.hibernate.ddl-auto=none
 sar.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #db ef
 ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
-ef.datasource.username=
-ef.datasource.password=
+ef.datasource.username=ebr
+ef.datasource.password=password
 ef.datasource.driver-class-name=org.postgresql.Driver
 ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ef.jpa.generate-ddl=false
