--- a/servicio-sarpps-dev.properties
+++ b/servicio-sarpps-dev.properties
@@ -1,27 +1,30 @@
-#Configuracion general postgresSql
-spring.datasource.driverClassName=org.postgresql.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
+#db sar
+sar.datasource.url=jdbc:postgresql://localhost:5432/sarm1
+sar.datasource.username=ebr
+sar.datasource.password=password
+sar.datasource.driver-class-name=org.postgresql.Driver
+sar.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+sar.jpa.generate-ddl=false
+sar.jpa.hibernate.ddl-auto=none
+sar.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#db ef
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
+ef.datasource.username=ebr
+ef.datasource.password=password
+ef.datasource.driver-class-name=org.postgresql.Driver
+ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ef.jpa.generate-ddl=false
+ef.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/sarm1
-spring.datasource.username=ebr
-spring.datasource.password=password
-
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-
 #Propiedades para zipkin server
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://localhost:9411//
