--- a/servicio-sartc-dev.properties
+++ b/servicio-sartc-dev.properties
@@ -20,6 +20,14 @@ ef.datasource.driver-class-name=org.postgresql.Driver
 ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ef.jpa.generate-ddl=false
 ef.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
