--- a/servicio-sartc-dev.properties
+++ b/servicio-sartc-dev.properties
@@ -13,7 +13,7 @@ sar.jpa.generate-ddl=false
 sar.jpa.hibernate.ddl-auto=update
 sar.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #db ef
-ef.datasource.url=jdbc:postgresql://localhost:5432/ef
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
 ef.datasource.username=ebr
 ef.datasource.password=password
 ef.datasource.driver-class-name=org.postgresql.Driver
