--- a/servicio-sarpps-dev.properties
+++ b/servicio-sarpps-dev.properties
@@ -5,7 +5,7 @@ sar.datasource.password=password
 sar.datasource.driver-class-name=org.postgresql.Driver
 sar.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 sar.jpa.generate-ddl=false
-sar.jpa.hibernate.ddl-auto=update
+sar.jpa.hibernate.ddl-auto=create
 sar.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #db ef
 ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
