--- a/servicio-sarpps-dev.properties
+++ b/servicio-sarpps-dev.properties
@@ -4,7 +4,7 @@ sar.datasource.username=ebr
 sar.datasource.password=password
 sar.datasource.driver-class-name=org.postgresql.Driver
 sar.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-sar.jpa.generate-ddl=false
+sar.jpa.generate-ddl=true
 sar.jpa.hibernate.ddl-auto=create
 sar.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #db ef
