--- a/servicio-controles-gestion-dev.properties
+++ b/servicio-controles-gestion-dev.properties
@@ -14,8 +14,8 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
-spring.datasource.username=postgres
-spring.datasource.password=luis123
+spring.datasource.username=ebr
+spring.datasource.password=password
 
 #Configuracion logs
 logging.level.root=INFO
