--- a/servicio-controles-gestion-dev.properties
+++ b/servicio-controles-gestion-dev.properties
@@ -17,6 +17,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
 spring.datasource.username=ebr
 spring.datasource.password=password
 
+hibernate.bytecode.provider=javassist
+
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
