--- a/servicio-controles-gestion-dev.properties
+++ b/servicio-controles-gestion-dev.properties
@@ -1,23 +1,30 @@
 #Configuracion general postgresSql
-spring.datasource.driverClassName=org.postgresql.Driver
+#db reportes_regultarios
+ctrl.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+ctrl.datasource.username=ebr
+ctrl.datasource.password=password
+ctrl.datasource.driverClassName=org.postgresql.Driver
+ctrl.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ctrl.jpa.generate-ddl=true
+ctrl.jpa.hibernate.ddl-auto=update
+ctrl.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#db ef
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
+ef.datasource.username=ebr
+ef.datasource.password=password
+ef.datasource.driver-class-name=org.postgresql.Driver
+ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ef.jpa.generate-ddl=false
+ef.jpa.hibernate.ddl-auto=none
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
-spring.datasource.username=ebr
-spring.datasource.password=password
-
-hibernate.bytecode.provider=javassist
+logging.level.org.hibernate.SQL=DEBUG
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#hibernate.bytecode.provider=javassist
 
 #Configuracion logs
 logging.level.root=INFO
