--- a/servicio-usuario-dev.properties
+++ b/servicio-usuario-dev.properties
@@ -9,3 +9,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=10
