--- a/servicio-controles-gestion-dev.properties
+++ b/servicio-controles-gestion-dev.properties
@@ -15,6 +15,8 @@ spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+min.idle.conexion=1
+max.active.conexion=10
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
