--- a/servicio-controles-gestion-dev.properties
+++ b/servicio-controles-gestion-dev.properties
@@ -1,12 +1,12 @@
 #Configuracion general postgresSql
 #db reportes_regultarios
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios2
 spring.datasource.username=ebr
 spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #ctrl.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.properties.hibernate.show_sql=false
