--- a/servicio-controles-gestion-dev.properties
+++ b/servicio-controles-gestion-dev.properties
@@ -17,6 +17,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 min.idle.conexion=1
 max.active.conexion=10
+
+mail.copy=karina.miranda@stpmex.com
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
