--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -7,6 +7,11 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
+#DB DATAWAREHOUSE
+spring.datasource.url=jdbc:postgresql://localhost:5432/baseef
+spring.datasource.username=ebr
+spring.datasource.password=password
+
 min.idle.conexion=1
 max.active.conexion=10
 
