--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -8,9 +8,9 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
 #DB DATAWAREHOUSE
-spring.datasource.url=jdbc:postgresql://localhost:5432/baseef
-spring.datasource.username=ebr
-spring.datasource.password=password
+dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef
+dwh.datasource.username=ebr
+dwh.datasource.password=password
 
 min.idle.conexion=1
 max.active.conexion=10
