--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -1,16 +1,23 @@
-#db ef
+#Conexion a BD Replica
 spring.datasource.url=jdbc:postgresql://localhost:5432/baseef
 spring.datasource.username=ebr
 spring.datasource.password=password
+
+#Conexion a BD Datwarehouse
+dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef
+dwh.datasource.username=ebr
+dwh.datasource.password=password
+
+#Conexion a BD Transacional
+tx.datasource.url=jdbc:postgresql://localhost:5432/baseef
+tx.datasource.username=ebr
+tx.datasource.password=password
+
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
-
-#DB DATAWAREHOUSE
-dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef
-dwh.datasource.username=ebr
-dwh.datasource.password=password
 
 min.idle.conexion=1
 max.active.conexion=10
