--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -13,6 +13,10 @@ tx.datasource.url=jdbc:postgresql://localhost:5432/baseef
 tx.datasource.username=ebr
 tx.datasource.password=password
 
+#Conexion a BD Atencion Clientes provisional
+ac.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios2
+ac.datasource.username=ebr
+ac.datasource.password=password
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
