--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -1,7 +1,7 @@
 #Conexion a BD Replica
-spring.datasource.url=jdbc:postgresql://localhost:5432/baseef
-spring.datasource.username=ebr
-spring.datasource.password=password
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
+ef.datasource.username=ebr
+ef.datasource.password=password
 
 #Conexion a BD Datwarehouse
 dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef
