--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -3,26 +3,40 @@ ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
 ef.datasource.username=ebr
 ef.datasource.password=password
 
+ef.datasource.driver-class-name=org.postgresql.Driver
+ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ef.jpa.generate-ddl=false
+ef.jpa.hibernate.ddl-auto=none
+
 #Conexion a BD Datwarehouse
 dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef
 dwh.datasource.username=ebr
 dwh.datasource.password=password
+
+dwh.datasource.driver-class-name=org.postgresql.Driver
+dwh.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+dwh.jpa.generate-ddl=false
+dwh.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Transacional
 tx.datasource.url=jdbc:postgresql://localhost:5432/baseef
 tx.datasource.username=ebr
 tx.datasource.password=password
 
+tx.datasource.driver-class-name=org.postgresql.Driver
+tx.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+tx.jpa.generate-ddl=false
+tx.jpa.hibernate.ddl-auto=none
+
 #Conexion a BD Atencion Clientes provisional
 ac.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios2
 ac.datasource.username=ebr
 ac.datasource.password=password
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+ac.datasource.driver-class-name=org.postgresql.Driver
+ac.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ac.jpa.generate-ddl=false
+ac.jpa.hibernate.ddl-auto=none
 
 min.idle.conexion=1
 max.active.conexion=10
