--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -1,5 +1,5 @@
 #Conexion a BD Replica
-ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef1
 ef.datasource.username=ebr
 ef.datasource.password=password
 
@@ -9,7 +9,7 @@ ef.jpa.generate-ddl=false
 ef.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Datwarehouse
-dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef
+dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef1
 dwh.datasource.username=ebr
 dwh.datasource.password=password
 
@@ -19,7 +19,7 @@ dwh.jpa.generate-ddl=false
 dwh.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Transacional
-tx.datasource.url=jdbc:postgresql://localhost:5432/baseef
+tx.datasource.url=jdbc:postgresql://localhost:5432/baseef1
 tx.datasource.username=ebr
 tx.datasource.password=password
 
@@ -36,7 +36,7 @@ ac.datasource.password=password
 ac.datasource.driver-class-name=org.postgresql.Driver
 ac.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ac.jpa.generate-ddl=false
-ac.jpa.hibernate.ddl-auto=none
+ac.jpa.hibernate.ddl-auto=create
 
 min.idle.conexion=1
 max.active.conexion=10
