--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -35,7 +35,7 @@ ac.datasource.password=password
 
 ac.datasource.driver-class-name=org.postgresql.Driver
 ac.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-ac.jpa.generate-ddl=false
+ac.jpa.generate-ddl=true
 ac.jpa.hibernate.ddl-auto=create
 
 min.idle.conexion=1
