--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -35,8 +35,8 @@ ac.datasource.password=password
 
 ac.datasource.driver-class-name=org.postgresql.Driver
 ac.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-ac.jpa.generate-ddl=true
-ac.jpa.hibernate.ddl-auto=create
+ac.jpa.generate-ddl=false
+ac.jpa.hibernate.ddl-auto=none
 
 min.idle.conexion=1
 max.active.conexion=10
