--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -51,3 +51,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+ruta.archivos.temp=/home/demo/app/edocta_tmp/
