--- a/servicio-coreatc-dev.properties
+++ b/servicio-coreatc-dev.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 min.idle.conexion=1
 max.active.conexion=10
+ruta.archivos.temp=
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
