--- a/servicio-coreatc-dev.properties
+++ b/servicio-coreatc-dev.properties
@@ -6,12 +6,16 @@ spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.auto.comm
 
 #spring.jpa.properties.hibernate.show_sql=false
 #spring.jpa.properties.hibernate.use_sql_comments=false
 #spring.jpa.properties.hibernate.format_sql=false
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+gateway.user.name=reportesRest
+gateway.user.password=12345
 
 min.idle.conexion=1
 max.active.conexion=10
