--- a/servicio-coreatc-dev.properties
+++ b/servicio-coreatc-dev.properties
@@ -6,7 +6,6 @@ spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.auto.comm
 
 #spring.jpa.properties.hibernate.show_sql=false
 #spring.jpa.properties.hibernate.use_sql_comments=false
@@ -16,6 +15,8 @@ spring.datasource.auto.comm
 
 gateway.user.name=reportesRest
 gateway.user.password=12345
+
+archivo.templateId=eb7cefbd0e246e3b6725655ccbe01ec
 
 min.idle.conexion=1
 max.active.conexion=10
