--- a/servicio-usuario-dev.properties
+++ b/servicio-usuario-dev.properties
@@ -10,5 +10,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+gateway.user.name=frontEndApp
+gateway.user.password=678910
+
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.maximum-pool-size=10
