--- a/application.properties
+++ b/application.properties
@@ -23,6 +23,21 @@ config.security.oauth.secret.sitiaa=GVLCf\*d]6CR:rGP$f/y
 config.security.oauth.client.id.sar=sarClient
 config.security.oauth.secret.sar=ymYjd8wsCqtNy
 
+config.security.oauth.client.id.millas=millasApp
+config.security.oauth.secret.millas=MvZmfu2tq4YErzWN
+
+config.security.oauth.client.id.millas.curp=millasCurp
+config.security.oauth.secret.millas.curp=jncAxo3Of$LAHaTz
+
+config.security.oauth.client.id.pld=pldClient
+config.security.oauth.secret.pld=M_fS7Q3$bou1_PLd
+
+config.security.oauth.client.id.h2h.core=h2h-ss-core
+config.security.oauth.secret.h2h.core=JSa9!O4Gi9H
+
+config.security.oauth.client.id.h2h.generics=h2h-ss-generics
+config.security.oauth.secret.h2h.generics=08%ZFH6ziCq
+
 config.security.oauth.jwt.key=llavesecreta_mas_segura_del_universo
 
 
