--- a/servicio-coreatc-dev.properties
+++ b/servicio-coreatc-dev.properties
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-gateway.user.name=reportesRest
-gateway.user.password=12345
+gateway.user.name=frontEndApp
+gateway.user.password=678910
 
 archivo.templateId=eb7cefbd0e246e3b6725655ccbe01ec
 
