--- a/servicio-coreatc-dev.properties
+++ b/servicio-coreatc-dev.properties
@@ -1,7 +1,7 @@
 #Configuracion general postgresSql
 #db controles
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios2
-spring.datasource.username=ebr
+spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
