--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -1,6 +1,6 @@
 #Conexion a BD Replica
-ef.datasource.url=jdbc:postgresql://localhost:5432/baseef1
-ef.datasource.username=ebr
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
+ef.datasource.username=postgres
 ef.datasource.password=password
 
 ef.datasource.driver-class-name=org.postgresql.Driver
@@ -9,8 +9,8 @@ ef.jpa.generate-ddl=false
 ef.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Datwarehouse
-dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef1
-dwh.datasource.username=ebr
+dwh.datasource.url=jdbc:postgresql://localhost:5432/baseef
+dwh.datasource.username=postgres
 dwh.datasource.password=password
 
 dwh.datasource.driver-class-name=org.postgresql.Driver
@@ -19,8 +19,8 @@ dwh.jpa.generate-ddl=false
 dwh.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Transacional
-tx.datasource.url=jdbc:postgresql://localhost:5432/baseef1
-tx.datasource.username=ebr
+tx.datasource.url=jdbc:postgresql://localhost:5432/baseef
+tx.datasource.username=postgres
 tx.datasource.password=password
 
 tx.datasource.driver-class-name=org.postgresql.Driver
@@ -29,8 +29,8 @@ tx.jpa.generate-ddl=false
 tx.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Atencion Clientes provisional
-ac.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios2
-ac.datasource.username=ebr
+ac.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+ac.datasource.username=postgres
 ac.datasource.password=password
 
 ac.datasource.driver-class-name=org.postgresql.Driver
