--- a/gateway-server-dev.properties
+++ b/gateway-server-dev.properties
@@ -22,3 +22,5 @@ spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://zipkin-server:9411//
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+gw.serverport
