--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -38,6 +38,17 @@ ac.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ac.jpa.generate-ddl=false
 ac.jpa.hibernate.ddl-auto=none
 
+#Conexion a BD Facturacion provisional
+fac.datasource.url=jdbc:postgresql://localhost:5432/baseef
+fac.datasource.username=postgres
+fac.datasource.password=password
+
+fac.datasource.driver-class-name=org.postgresql.Driver
+fac.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+fac.jpa.generate-ddl=false
+fac.jpa.hibernate.ddl-auto=none
+
+
 min.idle.conexion=1
 max.active.conexion=10
 
