--- a/servicio-coreatc-dev.properties
+++ b/servicio-coreatc-dev.properties
@@ -20,8 +20,23 @@ archivo.templateId=eb7cefbd0e246e3b6725655ccbe01ec
 
 min.idle.conexion=1
 max.active.conexion=10
-ruta.archivos.temp=
+
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+
+
+
+ruta.archivos.temp=/temp/
+
+reportes.nextcloud.user=ReportesRegulatorios
+reportes.nextcloud.password=xGJhUB3CNgWW6Sy
+reportes.nextcloud.url=http://10.5.30.38/nextcloud/
+reportes.nextcloud.remotePath=Expedientes/
+
+sicli.nextcloud.user=ReportesRegulatorios
+sicli.nextcloud.password=xGJhUB3CNgWW6Sy
+sicli.nextcloud.url=http://10.5.1.36/nextcloud/
+sicli.nextcloud.remotePath=core/
