--- a/servicio-coreatc-dev.properties
+++ b/servicio-coreatc-dev.properties
@@ -40,3 +40,5 @@ sicli.nextcloud.user=ReportesRegulatorios
 sicli.nextcloud.password=xGJhUB3CNgWW6Sy
 sicli.nextcloud.url=http://10.5.1.36/nextcloud/
 sicli.nextcloud.remotePath=core/
+
+nextcloud.conector.name=REPORTES
