--- a/application.properties
+++ b/application.properties
@@ -38,6 +38,9 @@ config.security.oauth.secret.h2h.core=JSa9!O4Gi9H
 config.security.oauth.client.id.h2h.generics=h2h-ss-generics
 config.security.oauth.secret.h2h.generics=08%ZFH6ziCq
 
+config.security.oauth.client.id.api.meltsan=apiMeltsan
+config.security.oauth.secret.api.meltsan=pw$2HT(,!V)h
+
 config.security.oauth.jwt.key=llavesecreta_mas_segura_del_universo
 
 
