--- a/onboardingapp-dev.properties
+++ b/onboardingapp-dev.properties
@@ -5,7 +5,7 @@ server.port=8097
 spring.datasource.url=jdbc:postgresql://localhost:5432/onboarding
 #spring.datasource.url=jdbc:postgresql://ms-postgresql:5432/prospectos
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
