--- a/onboardingapp-dev.properties
+++ b/onboardingapp-dev.properties
@@ -8,7 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.defer-datasource-initialization=true
 
@@ -66,7 +66,8 @@ ef.alta.cuenta.empresa=STPCODI_PF
 ef.alta.cuenta.prefijo=3182
 
 url.confirmCorreo.baseUrl=https://efws-dev.stpmex.com
-url.feign.codirest=https://spei3.stpmex.com:8096
+#url.feign.codirest=https://spei3.stpmex.com:8096
+url.feign.codirest=https://10.5.30.70:8096
 url.feign.registracodi=http://10.5.30.70:8088
 
 huawei.obs.cfg.credentials=credentials.csv
