--- a/onboardingapp-dev.properties
+++ b/onboardingapp-dev.properties
@@ -65,8 +65,8 @@ ef.jks.alias=stpcodi_pf
 ef.alta.cuenta.empresa=STPCODI_PF
 ef.alta.cuenta.prefijo=3182
 
-url.confirmCorreo.baseUrl=https://efws-dev.stpmex.com
-#url.feign.codirest=https://spei3.stpmex.com:8096
+#url.confirmCorreo.baseUrl=https://efws-dev.stpmex.com
+url.feign.codirest=https://spei3.stpmex.com:8096
 url.feign.codirest=https://10.5.30.70:8096
 url.feign.registracodi=http://10.5.30.70:8088
 
