--- a/mngmtacct-dev.properties
+++ b/mngmtacct-dev.properties
@@ -29,4 +29,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.liquibase.change-log=classpath:/db.changelog/db.changelog-master.xml
 url.feign.onboarding=http://spei3.stpmex.com:8097
 url.feign.registracodi=http://10.5.30.70:8088
-
+url.feign.cuentaTF=http://spei3.stpmex.com:8904
