--- a/mngmtacct-dev.properties
+++ b/mngmtacct-dev.properties
@@ -30,3 +30,5 @@ spring.liquibase.change-log=classpath:/db.changelog/db.changelog-master.xml
 url.feign.onboarding=http://spei3.stpmex.com:8097
 url.feign.registracodi=http://10.5.30.70:8088
 url.feign.cuentaTF=http://spei3.stpmex.com:8904
+
+app.institucion_contraparte=846
