--- a/servicio-atc-exposition.dev.properties
+++ b/servicio-atc-exposition.dev.properties
@@ -15,3 +15,8 @@ gateway.user.password=678910
 
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.maximum-pool-size=10
+
+#Configuracion logs
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
