--- a/servicio-atc-exposition.dev.properties
+++ b/servicio-atc-exposition.dev.properties
@@ -1,22 +1,44 @@
+#Configuracion general postgresSql
+#db controles
 spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.use_sql_comments=false
+#spring.jpa.properties.hibernate.format_sql=false
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 gateway.user.name=frontEndApp
 gateway.user.password=678910
 
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.maximum-pool-size=10
+archivo.templateId=eb7cefbd0e246e3b6725655ccbe01ec
+
+min.idle.conexion=1
+max.active.conexion=10
 
 #Configuracion logs
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+
+
+
+ruta.archivos.temp=/temp/
+
+reportes.nextcloud.user=ReportesRegulatorios
+reportes.nextcloud.password=xGJhUB3CNgWW6Sy
+reportes.nextcloud.url=http://10.5.30.38/nextcloud/
+reportes.nextcloud.remotePath=Expedientes/
+
+sicli.nextcloud.user=ReportesRegulatorios
+sicli.nextcloud.password=xGJhUB3CNgWW6Sy
+sicli.nextcloud.url=http://10.5.1.36/nextcloud/
+sicli.nextcloud.remotePath=core/
+
+nextcloud.conector.name=REPORTES
