--- a/stp-codirest-dev.properties
+++ b/stp-codirest-dev.properties
@@ -140,3 +140,5 @@ spring.data.mongodb.database=bitacora
 valida.cadena.valor.banxico=.*[!@#$%^&*,/\\\\()¿~_'<>:;.?-].*
 url.feign.di.banxico=http://10.5.30.70:8055
 url.feign.atc
+
+cache.adress=redis://redis-codirest:16379
