--- a/stp-codirest-dev.properties
+++ b/stp-codirest-dev.properties
@@ -139,6 +139,9 @@ spring.data.mongodb.database=bitacora
 
 valida.cadena.valor.banxico=.*[!@#$%^&*,/\\\\()¿~_'<>:;.?-].*
 url.feign.di.banxico=http://10.5.30.70:8055
-url.feign.atc
+
 
 cache.adress=redis://redis-codirest:16379
+
+url.feign.atc=http://10.5.30.70:8017
+url.feign.registro=http://10.5.30.70:8017
