--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -4,7 +4,7 @@ configuracion.text=Ambiente de Default nuevo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/reportes
 spring.datasource.username=postgres
-spring.datasource.password=1q2w3e4r
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -19,7 +19,7 @@ coi.password.bd=1q2w3e4r5t
 
 url.reportes.db=jdbc:postgresql://localhost:5432/reportes
 postgres.username=postgres
-postgres.password=1q2w3e4r
+postgres.password=password
 
 configuracion.text=Ambiente de Desarrollo Actualizado en git
 configuracion.autor.nombre=John Doe
