--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -34,3 +34,6 @@ sitiApi.baseUrl=https://sitiapiqa.cnbv.gob.mx:8243
 siti.api.consumerKey=oeZ8a_F4WudyRmKn5e73z369myYa
 siti.api.consumerSecret=PjBmw2zkFPQGJjJfeGHRFr3WSUUa
 siti.api.url.token=https://sitiapiqa.cnbv.gob.mx:8243/token
+
+min.idle.conexion=1
+max.active.conexion=10
