--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -13,9 +13,13 @@ spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.url.coi.db=jdbc:sqlserver://localhost:1433;databaseName=COI90Empre2
-coi.username.bd=saq
-coi.password.bd=1q2w3e4r5t
+#spring.url.coi.db=jdbc:sqlserver://localhost:1433;databaseName=COI90Empre2
+#coi.username.bd=saq
+#coi.password.bd=1q2w3e4r5t
+
+spring.url.coi.db=jdbc:postgresql://localhost:5432/reportes
+coi.username.bd=postgres
+coi.password.bd=password
 
 url.reportes.db=jdbc:postgresql://localhost:5432/reportes
 postgres.username=postgres
