--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -41,3 +41,7 @@ siti.api.url.token=https://sitiapiqa.cnbv.gob.mx:8243/token
 
 min.idle.conexion=1
 max.active.conexion=10
+
+ambiente.correo=PROD
+correo.seguimiento.administrador=reporte.contraloria@stpmex.com
+correo.seguimiento.cco=martin.hernandez@stpmex.com
