--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -45,3 +45,11 @@ max.active.conexion=10
 ambiente.correo=PROD
 correo.seguimiento.administrador=reporte.contraloria@stpmex.com
 correo.seguimiento.cco=martin.hernandez@stpmex.com
+
+#REUNE
+base.url.api.reune=https://api-reune-pruebas.condusef.gob.mx
+api.reune.key=46920|66|65010|SI|NO
+api.reune.username=user_ssi_RQA2
+api.reune.pass=pwduserRQA
+api.reune.user=user_ssi_RQA2
+api.reune.pass=pwduserRQA
