--- a/application.properties
+++ b/application.properties
@@ -41,6 +41,9 @@ config.security.oauth.secret.h2h.generics=08%ZFH6ziCq
 config.security.oauth.client.id.api.meltsan=apiMeltsan
 config.security.oauth.secret.api.meltsan=pw$2HT(,!V)h
 
+config.security.oauth.client.id.ivr=ivrClient
+config.security.oauth.secret.ivr=uzW93Yk89IDD$
+
 config.security.oauth.jwt.key=llavesecreta_mas_segura_del_universo
 
 
