--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -53,3 +53,6 @@ api.reune.username=user_ssi_RQA2
 api.reune.pass=pwduserRQA
 api.reune.user=user_ssi_RQA2
 api.reune.pass=pwduserRQA
+
+gateway.user.name=frontEndApp
+gateway.user.password=678910
