--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -57,4 +57,4 @@ api.reune.pass=pwduserRQA
 gateway.user.name=frontEndApp
 gateway.user.password=678910
 
-ruta.notificacion.correcion
+ruta.notificacion.correcion=
