--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,19 +1,22 @@
+#Configuracion general postgresSql
+#db controles
 url-db=jdbc:postgresql://localhost:5432/ivrIntegration
 user-db=postgres
 pass-db=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.use_sql_comments=false
+#spring.jpa.properties.hibernate.format_sql=false
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-gateway.user.name=frontEndApp
-gateway.user.password=678910
-
-min.idle.conexion=1
+db-connection-minidle=1
 db-connection-maxidle=10
 
-db-connection-active=
+#Configuracion logs
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
