--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,6 +1,6 @@
 #Configuracion general postgresSql
 #db controles
-url.db=jdbc:postgresql://localhost:5432/ivrIntegration
+url-db=jdbc:postgresql://localhost:5432/ivrIntegration
 user-db=postgres
 pass-db=password
 spring.datasource.driverClassName=org.postgresql.Driver
