--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,11 +1,12 @@
 #Configuracion general postgresSql
 #db controles
-url-db=jdbc:postgresql://localhost:5432/ivrIntegration
-user-db=postgres
-pass-db=password
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+ivr.datasource.url=jdbc:postgresql://localhost:5432/ivrIntegration
+ivr.datasource.username=postgres
+ivr.datasource.password=password
+ivr.datasource.driver-class-name=org.postgresql.Driver
+ivr.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ivr.jpa.generate-ddl=false
+ivr.jpa.hibernate.ddl-auto=none
 
 #spring.jpa.properties.hibernate.show_sql=false
 #spring.jpa.properties.hibernate.use_sql_comments=false
