--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,13 +1,13 @@
 #Configuracion general postgresSql
 #db controles
-ef.datasource.url=jdbc:postgresql://localhost:5432/ivrIntegration
-ef.datasource.username=postgres
-ef.datasource.password=password
+ivr.datasource.url=jdbc:postgresql://localhost:5432/ivrIntegration
+ivr.datasource.username=postgres
+ivr.datasource.password=password
 
-ef.datasource.driver-class-name=org.postgresql.Driver
-ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-ef.jpa.generate-ddl=false
-ef.jpa.hibernate.ddl-auto=none
+ivr.datasource.driver-class-name=org.postgresql.Driver
+ivr.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ivr.jpa.generate-ddl=false
+ivr.jpa.hibernate.ddl-auto=none
 
 #spring.jpa.properties.hibernate.show_sql=false
 #spring.jpa.properties.hibernate.use_sql_comments=false
