--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -15,8 +15,8 @@ ivr.jpa.hibernate.ddl-auto=none
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-db-connection-minidle=1
-db-connection-maxidle=10
+min.idle.conexion=1
+max.active.conexion=10
 
 #Configuracion logs
 logging.level.root=INFO
