--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -22,3 +22,5 @@ max.active.conexion=10
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+longitud-pin=6
