--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -7,7 +7,7 @@ ivr.datasource.password=password
 ivr.datasource.driver-class-name=org.postgresql.Driver
 ivr.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ivr.jpa.generate-ddl=false
-ivr.jpa.hibernate.ddl-auto=none
+ivr.jpa.hibernate.ddl-auto=create
 
 #spring.jpa.properties.hibernate.show_sql=false
 #spring.jpa.properties.hibernate.use_sql_comments=false
