--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,13 +1,13 @@
 #Configuracion general postgresSql
 #db controles
-ivr.datasource.url=jdbc:postgresql://localhost:5432/ivrIntegration
-ivr.datasource.username=postgres
-ivr.datasource.password=password
+url-db=jdbc:postgresql://localhost:5432/ivrIntegration
+user-db=postgres
+pass-db=password
 
-ivr.datasource.driver-class-name=org.postgresql.Driver
-ivr.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-ivr.jpa.generate-ddl=false
-ivr.jpa.hibernate.ddl-auto=create
+#ivr.datasource.driver-class-name=org.postgresql.Driver
+#ivr.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#ivr.jpa.generate-ddl=false
+#ivr.jpa.hibernate.ddl-auto=create
 
 #spring.jpa.properties.hibernate.show_sql=false
 #spring.jpa.properties.hibernate.use_sql_comments=false
@@ -15,8 +15,12 @@ ivr.jpa.hibernate.ddl-auto=create
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-min.idle.conexion=1
-max.active.conexion=10
+#min.idle.conexion=1
+#max.active.conexion=10
+
+db-connection-active=10
+db-connection-maxidle=3
+db-connection-minidle=1
 
 #Configuracion logs
 logging.level.root=INFO
