--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,30 +1,12 @@
-#Configuracion general postgresSql
-#db controles
-url-db=jdbc:postgresql://localhost:5432/ivrIntegration
+
+spring.config.import=optional:configserver:
 user-db=postgres
 pass-db=password
-
-#ivr.datasource.driver-class-name=org.postgresql.Driver
-#ivr.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#ivr.jpa.generate-ddl=false
-#ivr.jpa.hibernate.ddl-auto=create
-
-#spring.jpa.properties.hibernate.show_sql=false
-#spring.jpa.properties.hibernate.use_sql_comments=false
-#spring.jpa.properties.hibernate.format_sql=false
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-#min.idle.conexion=1
-#max.active.conexion=10
-
+url-db=jdbc:postgresql://localhost:5432/ivrIntegration
 db-connection-active=10
 db-connection-maxidle=3
 db-connection-minidle=1
-
-#Configuracion logs
-logging.level.root=INFO
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 longitud-pin=6
