--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -3,10 +3,18 @@ spring.config.import=optional:configserver:
 user-db=postgres
 pass-db=password
 url-db=jdbc:postgresql://localhost:5432/ivrIntegration
-db-connection-active=10
-db-connection-maxidle=3
-db-connection-minidle=1
+
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 longitud-pin=6
+
+
+db-connection-active=100
+db-connection-maxidle=20
+db-connection-minidle=10
+db-connection-size=10
+db-connection-interval=30000
+db-connection-run=30000
+db-connection-time=60000
