--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -16,3 +16,5 @@ db-connection-size=10
 db-connection-interval=30000
 db-connection-run=30000
 db-connection-time=60000
+
+decrypt.public.key=src/main/resources/key/public_stp_clientes_persona.pe
