--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,6 +1,7 @@
 user-db=postgres
 pass-db=password
-url-db=jdbc:postgresql://localhost:5432/ivrIntegration
+#url-db=jdbc:postgresql://localhost:5432/ivrIntegration
+url-db=jdbc:postgresql://localhost:5432/ivr
 
 
 spring.jpa.show-sql=true
