--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=create
 longitud-pin=6
 
 
+
 db-connection-active=100
 db-connection-maxidle=20
 db-connection-minidle=10
@@ -19,3 +20,6 @@ db-connection-run=30000
 db-connection-time=60000
 
 decrypt.public.key=src/main/resources/key/public_stp_clientes_persona.pe
+
+gateway.user.name=frontEndApp
+gateway.user.password=678910
