--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -21,5 +21,5 @@ db-connection-time=60000
 
 decrypt.public.key=src/main/resources/key/public_stp_clientes_persona.pe
 
-gateway.user.name=frontEndApp
-gateway.user.password=678910
+gateway.user.name=ivrClient
+gateway.user.password=uzW93Yk89IDD$
