--- a/application.properties
+++ b/application.properties
@@ -44,6 +44,9 @@ config.security.oauth.secret.api.meltsan=pw$2HT(,!V)h
 config.security.oauth.client.id.ivr=ivrClient
 config.security.oauth.secret.ivr=uzW93Yk89IDD$
 
+config.security.oauth.client.id.sac=sacClient
+config.security.oauth.secret.sac=tXENz3941AWo
+
 config.security.oauth.jwt.key=llavesecreta_mas_segura_del_universo
 
 
