--- a/application.properties
+++ b/application.properties
@@ -44,8 +44,20 @@ config.security.oauth.secret.api.meltsan=pw$2HT(,!V)h
 config.security.oauth.client.id.ivr=ivrClient
 config.security.oauth.secret.ivr=uzW93Yk89IDD$
 
-config.security.oauth.client.id.sac=sacClient
-config.security.oauth.secret.sac=tXENz3941AWo
+config.security.oauth.client.id.ivr=ivrClient
+config.security.oauth.secret.ivr=uzW93Yk89IDD$
+
+config.security.oauth.client.id.sicliclient=sicliclient
+config.security.oauth.secret.sicliclient=0eX1w7xUvn
+
+config.security.oauth.client.id.erpclient=erpclient
+config.security.oauth.secret.erpclient=841fL0p1cm
+
+config.security.oauth.client.id.sacclient=sacclient
+config.security.oauth.secret.sacclient=HVkH6BR6L9
+
+config.security.oauth.client.id.pruebasqaclient=pruebasqaclient
+config.security.oauth.secret.pruebasqaclient=fu9n4L89lP
 
 config.security.oauth.jwt.key=llavesecreta_mas_segura_del_universo
 
