--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -23,3 +23,5 @@ decrypt.public.key=src/main/resources/key/public_stp_clientes_persona.pe
 
 gateway.user.name=ivrClient
 gateway.user.password=uzW93Yk89IDD$
+
+correo.qa=karina.miranda@stpmex.com
