--- a/ivrIntegration-qa.properties
+++ b/ivrIntegration-qa.properties
@@ -1,13 +1,27 @@
+user-db=postgres
+pass-db=password
+#url-db=jdbc:postgresql://localhost:5432/ivrIntegration
+url-db=jdbc:postgresql://localhost:5432/ivr
 
-spring.config.import=optional:configserver:
-user-db=u_identifica_persona
-pass-db=P-b\vza3a83YY7p>-aD_<
-url-db=jdbc:postgresql://10.5.11.57:5443/identifica_persona
-db-connection-active=10
-db-connection-maxidle=3
-db-connection-minidle=1
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 longitud-pin=6
 
+
+
+db-connection-active=100
+db-connection-maxidle=20
+db-connection-minidle=10
+db-connection-size=10
+db-connection-interval=30000
+db-connection-run=30000
+db-connection-time=60000
+
+decrypt.public.key=src/main/resources/key/public_stp_clientes_persona.pe
+
+gateway.user.name=ivrClient
+gateway.user.password=uzW93Yk89IDD$
+
+correo.qa=karina.miranda@stpmex.com,k_mir@hotmail.com
