--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -25,3 +25,7 @@ gateway.user.name=ivrClient
 gateway.user.password=uzW93Yk89IDD$
 
 correo.qa=karina.miranda@stpmex.com,k_mir@hotmail.com
+
+genesys.client.id=4e592938-38c6-4b37-82cd-16488b3ca41f
+genesys.client.secret=krEu6b35WViUyErqQ7pz-vNnekJPm5K3jIwbAcqN8Ps
+genesys.flow.id=6c0754b6-c776-428a-9a46-0b04b863dc0b
