--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -1,7 +1,7 @@
 #Conexion a BD Replica
-spring.datasource.url=jdbc:postgresql://localhost:5432/baseef
-spring.datasource.username=postgres
-spring.datasource.password=password
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
+ef.datasource.username=postgres
+ef.datasource.password=password
 
 ef.datasource.driver-class-name=org.postgresql.Driver
 ef.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -49,8 +49,8 @@ fac.jpa.generate-ddl=false
 fac.jpa.hibernate.ddl-auto=none
 
 
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.maximum-pool-size=10
+min.idle.conexion=1
+max.active.conexion=10
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
