--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -29,7 +29,7 @@ tx.jpa.generate-ddl=false
 tx.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Atencion Clientes provisional
-ac.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+ac.datasource.url=jdbc:postgresql://localhost:5432/baseef
 ac.datasource.username=postgres
 ac.datasource.password=password
 
