--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -1,5 +1,5 @@
 #Conexion a BD Replica
-ef.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
 ef.datasource.username=postgres
 ef.datasource.password=password
 
@@ -29,7 +29,7 @@ tx.jpa.generate-ddl=false
 tx.jpa.hibernate.ddl-auto=none
 
 #Conexion a BD Atencion Clientes provisional
-ac.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios123
+ac.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
 ac.datasource.username=postgres
 ac.datasource.password=password
 
@@ -63,4 +63,4 @@ logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-ruta.archivos.temp=/home/demo/app/edocta_tmp/
+ruta.archivos.temp=
