--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -30,3 +30,6 @@ genesys.client.id=4e592938-38c6-4b37-82cd-16488b3ca41f
 genesys.client.secret=krEu6b35WViUyErqQ7pz-vNnekJPm5K3jIwbAcqN8Ps
 genesys.flow.id=6c0754b6-c776-428a-9a46-0b04b863dc0b
 genesys.client.timeout = 30000
+
+mail.server.host=10.5.30.70
+mail.server.port=25
