--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -24,7 +24,7 @@ decrypt.public.key=src/main/resources/key/public_stp_clientes_persona.pe
 gateway.user.name=ivrClient
 gateway.user.password=uzW93Yk89IDD$
 
-correo.qa=karina.miranda@stpmex.com,k_mir@hotmail.com
+correo.qa=karina.miranda@stpmex.com
 
 genesys.client.id=4e592938-38c6-4b37-82cd-16488b3ca41f
 genesys.client.secret=krEu6b35WViUyErqQ7pz-vNnekJPm5K3jIwbAcqN8Ps
