--- a/reportes-regulatorios-dev.properties
+++ b/reportes-regulatorios-dev.properties
@@ -2,7 +2,7 @@ server.port=8005
 configuracion.text=Ambiente de Default nuevo
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportes
+spring.datasource.url=jdbc:postgresql://localhost:5432/rep_regulatorios
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -17,11 +17,11 @@ spring.jpa.properties.hibernate.format_sql=false
 #coi.username.bd=saq
 #coi.password.bd=1q2w3e4r5t
 
-spring.url.coi.db=jdbc:postgresql://localhost:5432/reportes
+spring.url.coi.db=jdbc:postgresql://localhost:5432/rep_regulatorios
 coi.username.bd=postgres
 coi.password.bd=password
 
-url.reportes.db=jdbc:postgresql://localhost:5432/reportes
+url.reportes.db=jdbc:postgresql://localhost:5432/rep_regulatorios
 postgres.username=postgres
 postgres.password=password
 
