--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,7 +1,7 @@
 user-db=postgres
 pass-db=password
 #url-db=jdbc:postgresql://localhost:5432/ivrIntegration
-url-db=jdbc:postgresql://localhost:5432/ivr
+url-db=jdbc:postgresql://localhost:5432/icp_provisional
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
